--- a/deployment-guides/antora-playbook-local.yml
+++ b/deployment-guides/antora-playbook-local.yml
@@ -4,12 +4,12 @@ site:
   start_page: deployment-guides::index.adoc
 content:
   sources:
-  - url: .
+  - url: ./..
     branches: HEAD
     start_path: deployment-guides
 ui: 
   bundle: 
-    url: https://github.com/boozallen/sdp-docs-skin/releases/download/1.0/ui-bundle.zip
+    url: https://github.com/boozallen/sdp-docs-skin/releases/download/1.1/ui-bundle.zip
     snapshot: true
   supplemental_files:
   - path: .nojekyll
